[package]
name = "iced_custom_widget"
version = "0.1.0"
authors = ["leang27 <52003343+leang27@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/hecrj/iced.git", features = ["debug"]}
iced_futures = {git = "https://github.com/hecrj/iced.git"}
iced_winit = {git = "https://github.com/hecrj/iced.git"}
iced_native = {git = "https://github.com/hecrj/iced.git"}
iced_wgpu = {git = "https://github.com/hecrj/iced.git"}
iced_graphics = {git = "https://github.com/hecrj/iced.git"}
iced_style = {git = "https://github.com/hecrj/iced.git"}
serde = { version = "1.0.117", features=['derive'] }
serde_yaml = "0.8.14"

serde-value = "0.7.0"
rand = "0.7.3"