[package]
name = "iced_custom_widget"
version = "0.1.0"
authors = ["leang27 <52003343+leang27@users.noreply.github.com>"]
edition = "2018"

[dependencies]
iced = {version = "0.2", features = ["debug", "image", "svg"]}
iced_native = "0.3.0"
iced_wgpu = "0.3.0"
iced_graphics = "0.1.0"
iced_style = "0.2.0"
serde = { version = "1.0.117", features=['derive'] }
serde_yaml = "0.8.14"
serde_json = "1.0.59"
rand = "0.7.3"
smart-default = "0.6.0"
